restructure and add favicon

--- a/pages/newtab.html
+++ b/pages/newtab.html
@@ -1,1 +1,22 @@
-<h1>new page background</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>New Tab</title>
+        <link rel="icon" type="image/png" href="images/favicon.png">
+        <style>
+            body {
+                margin: 0;
+                background: #181B28;
+            }
+            img {
+                width: 100vw; /* Cover full viewport width */
+                height: 100vh; /* Cover full viewport height */
+                object-fit: cover; /* Maintain aspect ratio and cover */
+                display: block; /* Prevent extra space below image */
+            }
+        </style>
+    </head>
+    <body>
+        <img src="images/bg.png">
+    </body>
+</html>
