--- a/pages/newtab.html
+++ b/pages/newtab.html
@@ -3,20 +3,9 @@
     <head>
         <title>New Tab</title>
         <link rel="icon" type="image/png" href="images/favicon.png">
-        <style>
-            body {
-                margin: 0;
-                background: #181B28;
-            }
-            img {
-                width: 100vw; /* Cover full viewport width */
-                height: 100vh; /* Cover full viewport height */
-                object-fit: cover; /* Maintain aspect ratio and cover */
-                display: block; /* Prevent extra space below image */
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
-    <body>
-        <img src="images/bg.png">
+    <body id="new-tab-body">
+        <img class="full-page-img" src="images/bg.png">
     </body>
 </html>
